[gd_scene load_steps=5 format=3 uid="uid://tj3ktedys5sh"]

[ext_resource type="Script" path="res://src/shop/shop_button.gd" id="1_kvo6q"]
[ext_resource type="Texture2D" uid="uid://by5wpf5vbkrw1" path="res://assets/custom/Card.png" id="2_idnqv"]
[ext_resource type="Theme" uid="uid://c3hfmpsb3fvhr" path="res://assets/game_theme.tres" id="3_btsws"]
[ext_resource type="Texture2D" uid="uid://i3hxrkvy84y4" path="res://assets/custom/Star.png" id="4_rvil2"]

[node name="ShopButton" type="Control"]
custom_minimum_size = Vector2(200, 280)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1720.0
offset_bottom = -800.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 10
size_flags_vertical = 3
script = ExtResource("1_kvo6q")

[node name="Border" type="Sprite2D" parent="."]
texture = ExtResource("2_idnqv")
offset = Vector2(100, 140)

[node name="HBox" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(200, 280)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Center" type="CenterContainer" parent="HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_btsws")

[node name="VBox" type="VBoxContainer" parent="HBox/Center"]
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="HBox/Center/VBox"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
text = "Item Name"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Image" type="TextureRect" parent="HBox/Center/VBox"]
layout_mode = 2

[node name="CostBox" type="HBoxContainer" parent="HBox/Center/VBox"]
layout_mode = 2

[node name="CostLabel" type="Label" parent="HBox/Center/VBox/CostBox"]
layout_mode = 2
size_flags_horizontal = 10
text = "-1 "

[node name="CostImg" type="TextureRect" parent="HBox/Center/VBox/CostBox"]
layout_mode = 2
size_flags_horizontal = 2
texture = ExtResource("4_rvil2")

[connection signal="gui_input" from="HBox" to="." method="_on_h_box_gui_input"]
